--- a/eyewear-bot.service
+++ b/eyewear-bot.service
@@ -1,26 +1,15 @@
 [Unit]
-Description=Eyewear Bot - WeChat Work Integration
-After=network.target mysql.service
+Description=Eyewear Bot Service
+After=network.target
 
 [Service]
 Type=simple
-User=www-data
-Group=www-data
-WorkingDirectory=/opt/eyewear-bot
-Environment="PATH=/opt/eyewear-bot/venv/bin"
-EnvironmentFile=/opt/eyewear-bot/.env
-ExecStart=/opt/eyewear-bot/venv/bin/python /opt/eyewear-bot/app.py
+WorkingDirectory=/opt/projects/eyewear-bot
+ExecStart=/opt/projects/venv/bin/python3 /opt/projects/eyewear-bot/app.py
+EnvironmentFile=/opt/projects/eyewear-bot/.env
 Restart=always
-RestartSec=10
-StandardOutput=append:/var/log/eyewear-bot/output.log
-StandardError=append:/var/log/eyewear-bot/error.log
-
-# Security settings
-NoNewPrivileges=true
-PrivateTmp=true
-ProtectSystem=strict
-ProtectHome=true
-ReadWritePaths=/opt/eyewear-bot /var/log/eyewear-bot
+StandardOutput=append:/opt/projects/logs/eyewear-bot.log
+StandardError=append:/opt/projects/logs/eyewear-bot.log
 
 [Install]
 WantedBy=multi-user.target
